# DAA_PROJECT

./: .gitignore  README.md  dataset.md  links.md  main.py  project.md  pyproject.toml
Extended/: README_extended.md  project_extended.md
Src/: __init__.py  config.py  main.py
Src/api/: __init__.py  app.py  routes.py  validators.py
Src/benchmark/: __init__.py  artifacts.py  cli.py  env_capture.py  matrix.py  plots.py  reports.py  runner.py  validators.py
Src/cache/: cache_manager.py  dataset_tracker.py  key_builder.py
Src/common/: errors.py  models.py  utils.py
Src/core/: __init__.py  algorithms.py  auto_select.py  comparator.py  dataset.py  engine.py  features.py  normalization.py  pipeline.py  preprocessing.py  scoring.py  strategies.py  types.py
tests/: test_API.py  test_algorithms.py  test_benchmark.py  test_cache.py  test_determinism.py
